<resources>
    <string name="app_name">Fitness in Lockdown</string>
    <string name="start">Button</string>
    <string name="stop">Button</string>
    <string name="distance">Distance</string>
    <string name="time_left">Time Left</string>
    <string name="avg_pace">Avg Pace</string>
    <string name="time_to_curfew">Time to Curfew</string>
    <string name="todo">TODO</string>
    <string name="start_button">Start</string>
    <string name="stop_button">Stop</string>
    <string name="title_activity_maps">Map</string>
</resources>